--- a/index.html
+++ b/index.html
@@ -3,135 +3,159 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Student Support</title>
-  <link rel="stylesheet" href="style.css" />
-
+  <title>Student Support - Test</title>
   <style>
     * { box-sizing: border-box; }
+    body { font-family: sans-serif; background:#fefefe; text-align:center; margin:0; padding:0; }
 
-    /* Modal/Overlay styles same as original */
-    .modal-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(15, 23, 42, 0.55);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-      backdrop-filter: blur(6px);
+    .page { display:none; padding:20px; }
+    .page.active { display:block; }
+
+    .hotspot, .back-button, .counselor-grid button, .modal-buttons button, .success-actions button, .crisis-actions button {
+      cursor:pointer; margin:5px; padding:10px 15px; border-radius:10px; border:none; font-size:14px;
     }
 
-    .modal { width: 360px; margin: 0 auto; background: #fff; padding: 28px 26px; border-radius: 18px; text-align: center; box-shadow: 0 24px 60px rgba(0,0,0,0.22); border: 1px solid #eef2f7; }
-    .modal h2 { margin: 0 0 14px 0; font-size: 20px; font-weight: 700; color: #0f172a; }
-    .modal input, .modal textarea { width: 100%; margin-bottom: 12px; padding: 11px 12px; font-size: 14px; border-radius: 12px; border: 1px solid #e6e8ec; background: #f9fafb; text-align: center; transition: border 0.2s, box-shadow 0.2s; }
-    .modal input:focus, .modal textarea:focus { outline:none; border:1px solid #0070c9; box-shadow:0 0 0 3px rgba(0,112,201,0.2); background:#fff; }
-    .modal textarea { resize:none; height:90px; }
-    .modal-buttons { display:flex; justify-content:center; gap:12px; margin-top:6px; }
-    .modal-buttons button { padding:9px 18px; border-radius:999px; border:none; cursor:pointer; font-size:14px; }
-    .modal-buttons button:first-child { background:#f1f5f9; color:#334155; }
-    .modal-buttons button:last-child { background:#0070c9; color:white; }
+    .back-button { background:#ccc; }
+    .counselor-grid { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:15px 0; }
 
-    /* Success modal */
-    .success-modal { width:320px; text-align:center; }
-    .success-icon { width:56px;height:56px;border-radius:50%;background:#16a34a;color:#fff;display:inline-flex;align-items:center;justify-content:center;font-size:28px;font-weight:700;margin:4px auto 10px auto; }
-    .success-text { font-size:18px;font-weight:700;color:#0f172a;margin-bottom:10px; }
-    .success-actions button { padding:10px 18px; border-radius:999px; border:none; cursor:pointer; font-size:14px; font-weight:600; background:#0070c9; color:#fff; }
+    .modal-overlay { position:fixed; inset:0; background:rgba(0,0,0,0.5); display:none; justify-content:center; align-items:center; }
+    .modal { background:#fff; padding:20px; border-radius:15px; width:300px; max-width:90%; text-align:center; }
 
-    /* Crisis modal */
-    .crisis-modal { width:min(560px,92vw); text-align:left; }
-    .crisis-modal h2 { text-align:center; }
-    .crisis-list { margin:0; padding:0; list-style:none; display:flex; flex-direction:column; gap:10px; font-size:14px; color:#0f172a; }
-    .crisis-list strong { display:block; font-size:15px; }
-    .crisis-section { background:#f8fafc; border:1px solid #e2e8f0; border-radius:12px; padding:12px; }
-    .crisis-actions { display:flex; justify-content:center; gap:12px; margin-top:14px; }
-    .crisis-actions .secondary { background:#f1f5f9; color:#334155; }
-    .crisis-actions .primary { background:#0070c9; color:#fff; }
+    .modal input, .modal textarea { width:100%; margin-bottom:10px; padding:8px; }
   </style>
 </head>
 <body>
 
-  <!-- Page 1 -->
-  <div class="page active" id="page1">
-    <img src="page1.png" alt="Welcome Page">
-    <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
-    <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
-    <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
-    <button class="hotspot family" onclick="chooseReason('Family issues or home stress')"></button>
-    <button class="hotspot relationship" onclick="chooseReason('Relationship or friendship problems')"></button>
-    <button class="hotspot bullying" onclick="chooseReason('Bullying or harassment')"></button>
-    <button class="hotspot talk" onclick="chooseReason('I just need someone to talk to')"></button>
-    <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
-  </div>
+<!-- Page 1: Reason -->
+<div class="page active" id="page1">
+  <h2>Select Reason</h2>
+  <button class="hotspot" onclick="chooseReason('Academic stress or pressure')">Academic stress or pressure</button>
+  <button class="hotspot" onclick="chooseReason('Anxiety or panic attacks')">Anxiety or panic attacks</button>
+  <button class="hotspot" onclick="chooseReason('Depression or sadness')">Depression or sadness</button>
+  <button class="hotspot" onclick="chooseReason('Family issues or home stress')">Family issues or home stress</button>
+</div>
 
-  <!-- Page 2 -->
-  <div class="page" id="page2">
-    <img src="page2.png" alt="Urgency Page">
-    <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
-    <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
-    <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
-    <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
-    <button class="back-button" onclick="goToPage('page1')">Back</button>
-  </div>
+<!-- Page 2: Urgency -->
+<div class="page" id="page2">
+  <h2>Select Urgency</h2>
+  <button class="hotspot" onclick="chooseUrgency('I’m Doing Fine – Just Curious')">I’m Doing Fine – Just Curious</button>
+  <button class="hotspot" onclick="chooseUrgency('Feeling a Little Off')">Feeling a Little Off</button>
+  <button class="hotspot" onclick="chooseUrgency('I’m Not Coping Well')">I’m Not Coping Well</button>
+  <button class="hotspot" onclick="chooseUrgency('I’m in Crisis')">I’m in Crisis</button>
+  <button class="back-button" onclick="goToPage('page1')">Back</button>
+</div>
 
-  <!-- Page 3 -->
-  <div class="page" id="page3">
-    <img src="page3.png" alt="Counselor Page">
-    <div class="counselor-grid" id="counselorGrid">
-      <!-- Hardcoded temporary buttons so they work immediately -->
-      <button onclick="openModal('miap2k10','miap2k10@gmail.com')">miap2k10@gmail.com</button>
-      <button onclick="openModal('kmcconnell','kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
-      <button onclick="openModal('gsorbi','gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
-      <button onclick="openModal('apanlilio','apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
-      <button onclick="openModal('aturner','aturner@smpanthers.org')">aturner@smpanthers.org</button>
-      <button onclick="openModal('cfilson','cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
-    </div>
-    <button class="back-button" onclick="goToPage('page2')">Back</button>
-  </div>
+<!-- Page 3: Counselor Selection -->
+<div class="page" id="page3">
+  <h2>Select Counselor</h2>
+  <div class="counselor-grid" id="counselorGrid"></div>
+  <button class="back-button" onclick="goToPage('page2')">Back</button>
+</div>
 
-  <!-- Crisis Modal -->
-  <div class="modal-overlay" id="crisisOverlay">
-    <div class="modal crisis-modal">
-      <h2>Immediate Support</h2>
-      <ul class="crisis-list">
-        <li class="crisis-section"><strong>Emergency</strong>911 – Emergency services (police / ambulance / fire).</li>
-        <li class="crisis-section"><strong>Mental Health & Crisis Support</strong>
-          988 Suicide & Crisis Lifeline – Call or text 988.<br>
-          Crisis Text Line – Text HOME to 741741.
-        </li>
-      </ul>
-      <div class="crisis-actions">
-        <button class="secondary" onclick="closeCrisisModal()">Close</button>
-        <button class="primary" onclick="continueFromCrisis()">Continue to Counselor</button>
-      </div>
+<!-- Modal: Student Info -->
+<div class="modal-overlay" id="modalOverlay">
+  <div class="modal">
+    <h2>Submit Message</h2>
+    <input type="text" id="firstName" placeholder="First Name">
+    <input type="text" id="lastName" placeholder="Last Name">
+    <input type="text" id="studentGrade" placeholder="Grade">
+    <input type="text" id="studentId" placeholder="Student ID">
+    <textarea id="extraNotes" placeholder="Additional notes"></textarea>
+    <div class="modal-buttons">
+      <button onclick="closeModal()">Cancel</button>
+      <button onclick="submitMessage()">Submit</button>
     </div>
   </div>
+</div>
 
-  <!-- Student Info Modal -->
-  <div class="modal-overlay" id="modalOverlay">
-    <div class="modal">
-      <h2>Submit Message</h2>
-      <input type="text" id="firstName" placeholder="First Name (required)">
-      <input type="text" id="lastName" placeholder="Last Name (required)">
-      <input type="text" id="studentGrade" placeholder="Grade (required)">
-      <input type="text" id="studentId" placeholder="Student ID (required)">
-      <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
-      <div class="modal-buttons">
-        <button onclick="closeModal()">Cancel</button>
-        <button onclick="submitMessage()">Submit</button>
-      </div>
-    </div>
+<!-- Modal: Success -->
+<div class="modal-overlay" id="successOverlay">
+  <div class="modal">
+    <h2>Success!</h2>
+    <p>Message sent!</p>
+    <button class="success-actions" onclick="closeSuccess()">OK</button>
   </div>
+</div>
 
-  <!-- Success Modal -->
-  <div class="modal-overlay" id="successOverlay">
-    <div class="modal success-modal">
-      <div class="success-icon">✓</div>
-      <div class="success-text">Message sent!</div>
-      <div class="success-actions">
-        <button onclick="closeSuccess()">OK</button>
-      </div>
-    </div>
+<!-- Modal: Crisis -->
+<div class="modal-overlay" id="crisisOverlay">
+  <div class="modal">
+    <h2>Crisis Support</h2>
+    <p>Call 911 or 988 for immediate help.</p>
+    <button class="crisis-actions" onclick="closeCrisisModal()">Close</button>
+    <button class="crisis-actions" onclick="continueFromCrisis()">Continue</button>
   </div>
+</div>
+
+<script>
+let selectedReason = "";
+let selectedUrgency = "";
+let selectedCounselor = "";
+let selectedCounselorEmail = "";
+
+// Pages
+function goToPage(id) {
+  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+  if(id==="page3") loadCounselors();
+}
+
+function chooseReason(reason){ selectedReason=reason; goToPage("page2"); }
+function chooseUrgency(urgency){
+  selectedUrgency=urgency;
+  if(urgency==="I’m in Crisis") openCrisisModal();
+  else goToPage("page3");
+}
+
+// Modals
+function openModal(c, e){ selectedCounselor=c; selectedCounselorEmail=e; document.getElementById("modalOverlay").style.display="flex"; }
+function closeModal(){ document.getElementById("modalOverlay").style.display="none"; }
+function openSuccess(){ document.getElementById("successOverlay").style.display="flex"; }
+function closeSuccess(){ document.getElementById("successOverlay").style.display="none"; goToPage("page1"); }
+function openCrisisModal(){ document.getElementById("crisisOverlay").style.display="flex"; }
+function closeCrisisModal(){ document.getElementById("crisisOverlay").style.display="none"; }
+function continueFromCrisis(){ closeCrisisModal(); goToPage("page3"); }
+
+// Load hardcoded counselors
+function loadCounselors(){
+  const grid = document.getElementById("counselorGrid");
+  grid.innerHTML="";
+  const counselors=[
+    {username:"miap2k10", email:"miap2k10@gmail.com"},
+    {username:"kmcconnell", email:"kmcconnell@smpanthers.org"},
+    {username:"gsorbi", email:"gsorbi@smpanthers.org"},
+    {username:"apanlilio", email:"apanlilio@smpanthers.org"},
+    {username:"aturner", email:"aturner@smpanthers.org"},
+    {username:"cfilson", email:"cfilson@smpanthers.org"}
+  ];
+  counselors.forEach(c=>{
+    const btn=document.createElement("button");
+    btn.textContent=c.email;
+    btn.onclick=()=>openModal(c.username,c.email);
+    grid.appendChild(btn);
+  });
+}
+
+// Submit (simulated)
+function submitMessage(){
+  const firstName=document.getElementById("firstName").value.trim();
+  const lastName=document.getElementById("lastName").value.trim();
+  if(!firstName||!lastName){ alert("Fill required fields"); return; }
+  closeModal(); openSuccess();
+  console.log({
+    firstName,lastName,reason:selectedReason,urgency:selectedUrgency,
+    counselor:selectedCounselor, email:selectedCounselorEmail
+  });
+  // Reset
+  selectedReason=selectedUrgency=selectedCounselor=selectedCounselorEmail="";
+  ["firstName","lastName","studentGrade","studentId","extraNotes"].forEach(id=>{
+    const el=document.getElementById(id); if(el) el.value="";
+  });
+}
+
+// Init
+window.onload = loadCounselors;
+</script>
 
 </body>
 </html>
