--- a/index.html
+++ b/index.html
@@ -121,24 +121,18 @@
 <script>
 let selectedReason="", selectedUrgency="", selectedCounselor="", selectedCounselorEmail="";
 
-// -------------------
 // Page Navigation
-// -------------------
 function goToPage(id){
   document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
   document.getElementById(id).classList.add("active");
   if(id==="page3") loadCounselors();
 }
 
-// -------------------
 // Reason / Urgency
-// -------------------
 function chooseReason(reason){ selectedReason=reason; goToPage("page2"); }
 function chooseUrgency(urgency){ selectedUrgency=urgency; if(urgency==="I’m in Crisis") openCrisisModal(); else goToPage("page3"); }
 
-// -------------------
 // Modals
-// -------------------
 function openCrisisModal(){ document.getElementById("crisisOverlay").style.display="flex"; }
 function closeCrisisModal(){ document.getElementById("crisisOverlay").style.display="none"; }
 function continueFromCrisis(){ closeCrisisModal(); goToPage("page3"); }
@@ -147,9 +141,7 @@ function closeModal(){ document.getElementById("modalOverlay").style.display="no
 function openSuccess(){ document.getElementById("successOverlay").style.display="flex"; }
 function closeSuccess(){ document.getElementById("successOverlay").style.display="none"; goToPage("page1"); }
 
-// -------------------
-// Load Counselors
-// -------------------
+// Load Counselors dynamically
 function loadCounselors(){
   const grid=document.getElementById("counselorGrid");
   grid.innerHTML="";
@@ -169,15 +161,25 @@ function loadCounselors(){
   });
 }
 
-// -------------------
-// Submit Message (Test)
-// -------------------
+// Submit Message (ready for Neon integration)
 function submitMessage(){
   const firstName=document.getElementById("firstName").value.trim();
   const lastName=document.getElementById("lastName").value.trim();
-  if(!firstName||!lastName){ alert("Fill required fields"); return; }
+  const grade=document.getElementById("studentGrade").value.trim();
+  const studentId=document.getElementById("studentId").value.trim();
+  const notes=document.getElementById("extraNotes").value.trim();
+
+  if(!firstName||!lastName||!grade||!studentId){ alert("Fill required fields"); return; }
+
+  // Test: log message (replace with API call to Neon when connected)
+  console.log({
+    firstName,lastName,grade,studentId,notes,
+    reason:selectedReason, urgency:selectedUrgency,
+    counselor:selectedCounselor, counselorEmail:selectedCounselorEmail,
+    dateTime:new Date().toISOString()
+  });
+
   closeModal(); openSuccess();
-  console.log({firstName,lastName,reason:selectedReason,urgency:selectedUrgency,counselor:selectedCounselor,email:selectedCounselorEmail});
   selectedReason=selectedUrgency=selectedCounselor=selectedCounselorEmail="";
   ["firstName","lastName","studentGrade","studentId","extraNotes"].forEach(id=>{
     const el=document.getElementById(id); if(el) el.value="";
